--- a/package.json
+++ b/package.json
@@ -12,21 +12,19 @@
     "find:unused": "next-unused"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.11",
     "@date-io/date-fns": "^2.10.8",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "@n8tb1t/use-scroll-position": "^2.0.3",
-    "@next/bundle-analyzer": "^10.0.7",
-    "@react-hook/window-scroll": "^1.3.0",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.9",
     "firebase-admin": "^9.5.0",
     "graphql": "^15.5.0",
-    "html-entities": "^2.1.0",
+    "graphql-request": "^3.4.0",
+    "html-entities": "^2.3.2",
     "html-react-parser": "^1.2.4",
     "localforage": "^1.9.0",
     "next": "10.0.7",
@@ -34,14 +32,9 @@
     "next-seo": "^4.20.0",
     "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
-    "prop-types": "^15.7.2",
-    "pure-react-carousel": "^1.27.6",
     "react": "17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "17.0.1",
-    "react-gutenberg": "^0.5.2",
-    "react-html-parser": "^2.0.2",
-    "react-icons": "^4.2.0",
     "react-in-viewport": "^1.0.0-alpha.16",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazy-load-image-component": "^1.5.1",
@@ -71,7 +64,7 @@
     "husky": "^5.1.0",
     "jscodeshift": "^0.11.0",
     "lint-staged": "^10.5.4",
-    "next-unused": "0.0.3",
+    "next-unused": "^0.0.6",
     "prettier": "^2.2.1",
     "webpack": "^5.23.0"
   }
