--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.0.1",
