--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-toastify": "^9.1.1",
     "reading-time": "^1.5.0",
     "sitemap": "^7.1.1",
+    "superjson": "^1.12.2",
     "swr": "^2.1.0",
     "wpapi": "^1.2.2",
     "zod": "^3.21.4"
