--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
@@ -37,6 +38,7 @@
     "next": "^13.2.4",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
+    "next-themes": "^0.2.1",
     "node-fetch": "^3.3.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
