--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: self-hosted
+    environment: 
+      name: production
+      url: https://atenews.ph
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
