--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
   build-and-deploy:
     runs-on: self-hosted
     environment: 
-      name: production
+      name: Production
       url: https://atenews.ph
     steps:
     - name: Checkout code
