--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build and deploy Atenews Web Client
 on:
   push:
     branches:
-      - master
+      - production
 
 jobs:
   build-and-deploy:
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
       with:
-        ref: master
+        ref: production
 
     - name: Pull changes
       working-directory: /srv/atenews.ph/frontend
