--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.1",
     "reading-time": "^1.5.0",
+    "sharp": "^0.33.4",
     "sitemap": "^7.1.1",
     "superjson": "^1.12.2",
     "swr": "^2.1.0",
