--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -1,7 +1,7 @@
 name: CI - Pull Requests
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, edited]
 jobs:
   build-image:
     name: PR - Docker image
