--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,7 @@ name: CI/CD - Production
 on:
   push:
     branches:
-      - production
+      - prod
 jobs:
   build-image:
     name: Production - Docker image
